fix: remove fixed default scrollbar width

--- a/xmlui/src/components/App/App.module.scss
+++ b/xmlui/src/components/App/App.module.scss
@@ -48,7 +48,6 @@ $scrollPaddingBlockPage: createThemeVar("scroll-padding-block-Pages");
     isolation: isolate;
     scroll-padding-block: $scrollPaddingBlockPage;
 
-
     &.vertical {
       flex-direction: row;
 
@@ -103,16 +102,16 @@ $scrollPaddingBlockPage: createThemeVar("scroll-padding-block-Pages");
           padding-inline: 0;
         }
       }
-      
+
       // Override overflow when scrollWholePage is false
       &:not(.scrollWholePage) {
         overflow: hidden;
         height: 100dvh;
-        
+
         &:global(.nested-app) {
           height: 100%;
         }
-        
+
         &.sticky {
           min-height: initial;
         }
@@ -187,7 +186,7 @@ $scrollPaddingBlockPage: createThemeVar("scroll-padding-block-Pages");
       --content-available-height: calc(
         var(--containerHeight, 100dvh) - var(--header-height) - var(--effective-footer-height)
       );
-      
+
       &.noFooter {
         --effective-footer-height: 0px;
       }
@@ -195,11 +194,11 @@ $scrollPaddingBlockPage: createThemeVar("scroll-padding-block-Pages");
       min-height: 100%;
       height: 100%;
       overflow: auto;
-      
+
       .mainContentArea {
         overflow: initial;
       }
-      
+
       .navPanelWrapper {
         width: $width-navPanel-App;
         position: sticky;
@@ -256,27 +255,29 @@ $scrollPaddingBlockPage: createThemeVar("scroll-padding-block-Pages");
     &.scrollWholePage {
       scrollbar-gutter: stable both-edges;
 
-      .headerWrapper {
-        margin-inline: calc(-1 * var(--scrollbar-width));
-        & > div {
-          padding-inline: var(--scrollbar-width);
+      &:not(.noScrollbarGutters) {
+        .headerWrapper {
+          margin-inline: calc(50% - 50vw);
+          & > div {
+            padding-inline: calc(50vw - 50%);
+          }
         }
-      }
 
-      .footerWrapper {
-        margin-inline: calc(-1 * var(--scrollbar-width));
-        & > div {
-          padding-inline: var(--scrollbar-width);
+        .footerWrapper {
+          margin-inline: calc(50% - 50vw);
+          & > div {
+            padding-inline: calc(50vw - 50%);
+          }
         }
-      }
 
-      &.verticalFullHeader {
-        .mainContentRow {
-          margin-inline: calc(-1 * var(--scrollbar-width));
-          width: calc(100% + (2 * var(--scrollbar-width)));
-        }
-        .mainContentArea {
-          padding-inline: var(--scrollbar-width);
+        &.verticalFullHeader {
+          .mainContentRow {
+            margin-inline: calc(50% - 50vw);
+            width: 100vw;
+          }
+          .mainContentArea {
+            padding-inline: calc(50vw - 50%);
+          }
         }
       }
 
@@ -295,12 +296,12 @@ $scrollPaddingBlockPage: createThemeVar("scroll-padding-block-Pages");
     &:not(.scrollWholePage) {
       overflow: hidden;
       height: 100dvh; // Use dynamic viewport height for mobile browser compatibility
-      
+
       // When nested (like in playground), use container dimensions instead of viewport
       &:global(.nested-app) {
         height: 100%;
       }
-      
+
       .mainContentRow {
         min-height: 0;
         height: 100%;
@@ -433,7 +434,8 @@ $scrollPaddingBlockPage: createThemeVar("scroll-padding-block-Pages");
 
     .navPanelCollapsed &.withToc {
       max-width: calc(
-        #{$maxWidth-content-App--withToc} + (#{$width-navPanel-App} - #{$width-navPanel-collapsed-App})
+        #{$maxWidth-content-App--withToc} +
+          (#{$width-navPanel-App} - #{$width-navPanel-collapsed-App})
       );
     }
 
